src/main/java/com/example/scrap_chef/code/error/ErrorCode.java
package com.example.scrap_chef.code.error;

public interface ErrorCode {
    int getCode();

    String getMessage();
}
